--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.2",
+        "prettier": "^2.8.8",
+        "prettier-plugin-blade": "^1.5.6",
         "sass": "^1.56.1",
         "vite": "^4.0.0"
     },
     "dependencies": {
         "bootstrap-icons": "^1.10.5",
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "@vitejs/plugin-vue": "^4.2.3",
+        "vue": "^3.2.36"
     }
 }
